--- a/d3_csv_join.html
+++ b/d3_csv_join.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <script src="https://koukita.github.io/websample/js/d3.min.js" type="text/JavaScript"></script>
-    <script src="https://koukita.github.io/websample/js/encoding.min.js"></script>
-    <script src="https://koukita.github.io/websample/js/alasql.min.js"></script>
+    <script type="text/JavaScript" src="https://koukita.github.io/websample/js/d3.min.js"></script>
+    <script type="text/JavaScript" src="https://koukita.github.io/websample/js/encoding.min.js"></script>
     
     <script>
       //CSVを読み込んで、文字コードを変換後Jsonに変換＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
@@ -199,13 +198,11 @@
           return json;
       };
 
-
     </script>
-  
   </head>
   <body>
+
     <svg></svg>
-    
 
   </body>
 </html>
